lab2 in process
done till 2.12

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div>
+      <p>
+        <a href="task2_1.html">task2_1</a><br />
+        <a href="task2_2.html">task2_2</a><br />
+        <a href="task2_3.html">task2_3</a><br />
+        <a href="task2_4.html">task2_4</a><br />
+        <a href="task2_5.html">task2_5</a><br />
+        <a href="task2_6.html">task2_6</a><br />
+        <a href="task2_7.html">task2_7</a><br />
+        <a href="task2_8.html">task2_8</a><br />
+        <a href="task2_9.html">task2_9</a><br />
+        <a href="task2_10.html">Task2_10</a><br />
+        <a href="task2_11.html">task2_11</a><br />
+        <a href="task2_12.html">task2_12</a><br />
+        <a href="task2_13.html">task2_13</a><br />
+        <a href="task2_14.html">task2_14</a><br />
+        <a href="task2_15.html">task2_15</a><br />
+      </p>
+    </div>
+  </body>
 </html>
