--- a/lab2/task2_2.html
+++ b/lab2/task2_2.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Task 2.2</title>
+  </head>
+  <body style="padding: 0; margin: 0">
+    <header style="background-color: lightgray; height: 80px">
+      <h1 style="margin: 0; padding: 3px">CSS Liquid Layout #3.2- (Fluid-Fluid-Fixed)</h1>
+    </header>
+    <div style="display: flex">
+      <div style="width: 25%; background-color: lightgreen; padding: 3px">
+        <b>Left Column: <span style="color: red">25%</span></b> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Suspendisse mollis libero lacinia, dictum nulla quis, lobortis turpis. Quisque auctor porta convallis. Proin
+        vulputate placerat lectus et imperdiet. Donec pulvinar tempor posuere. Fusce nibh dolor, ornare vel egestas in,
+        condimentum vel mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam ac
+        eleifend dui. Praesent malesuada sagittis odio vitae gravida. Donec sodales diam turpis, sed blandit ante bibendum
+        sed. Vestibulum feugiat lectus a felis porttitor, id cursus purus ultricies. Nulla molestie pulvinar ipsum, eget
+        fermentum urna ullamcorper non. In lacinia nisi at elit efficitur, ut congue nulla tempus. Donec et urna varius,
+        efficitur felis at, blandit elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
+        turpis egestas. Proin quis convallis nibh, eget interdum turpis.
+      </div>
+
+      <div style="flex: 1; padding: 3px">
+        <b>Content Column: <span style="color: red">Fluid</span></b> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Suspendisse mollis libero lacinia, dictum nulla quis, lobortis turpis. Quisque auctor porta convallis. Proin
+        vulputate placerat lectus et imperdiet. Donec pulvinar tempor posuere. Fusce nibh dolor, ornare vel egestas in,
+        condimentum vel mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam ac
+        eleifend dui. Praesent malesuada sagittis odio vitae gravida. Donec sodales diam turpis, sed blandit ante bibendum
+        sed. Vestibulum feugiat lectus a felis porttitor, id cursus purus ultricies. Nulla molestie pulvinar ipsum, eget
+        fermentum urna ullamcorper non. In lacinia nisi at elit efficitur, ut congue nulla tempus. Donec et urna varius,
+        efficitur felis at, blandit elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
+        turpis egestas. Proin quis convallis nibh, eget interdum turpis.
+      </div>
+
+      <div style="width: 200px; background-color: rgb(239, 222, 38); padding: 3px">
+        <b>Right Column: <span style="color: red">200px</span></b> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Suspendisse mollis libero lacinia, dictum nulla quis, lobortis turpis. Quisque auctor porta convallis. Proin
+        vulputate placerat lectus et imperdiet. Donec pulvinar tempor posuere. Fusce nibh dolor, ornare vel egestas in,
+        condimentum vel mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam ac
+        eleifend dui. Praesent malesuada sagittis odio vitae gravida. Donec sodales diam turpis, sed blandit ante bibendum
+        sed. Vestibulum feugiat lectus a felis porttitor, id cursus purus ultricies. Nulla molestie pulvinar ipsum, eget
+        fermentum urna ullamcorper non. In lacinia nisi at elit efficitur, ut congue nulla tempus. Donec et urna varius,
+        efficitur felis at, blandit elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
+        turpis egestas. Proin quis convallis nibh, eget interdum turpis.
+      </div>
+    </div>
+    <footer style="background-color: black; height: 20px; text-align: center">
+      <a href="www.csd.tsu.ru" style="color: yellow">www.csd.tsu.ru</a>
+    </footer>
+  </body>
 </html>
