--- a/lab2/index.html
+++ b/lab2/index.html
@@ -20,7 +20,7 @@
         <a href="task2_7.html">task2_7</a><br />
         <a href="task2_8.html">task2_8</a><br />
         <a href="task2_9.html">task2_9</a><br />
-        <a href="task2_10.html">Task2_10</a><br />
+        <a href="task2_10.html">task2_10</a><br />
         <a href="task2_11.html">task2_11</a><br />
         <a href="task2_12.html">task2_12</a><br />
         <a href="task2_13.html">task2_13</a><br />
