--- a/lab2/task2_12.html
+++ b/lab2/task2_12.html
@@ -7,9 +7,11 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Task 2.12</title>
+    <link rel="stylesheet" href="task2_12.css" />
   </head>
   <body>
     <div
+      class="content"
       style="
         width: 100%;
         background-color: aqua;
@@ -17,15 +19,35 @@
         display: flex;
       "
     >
-      <div>
-        <ul>
+      <div
+        class="list"
+        style="
+          padding-right: 10px;
+          background-color: bisque;
+          height: fit-content;
+        "
+      >
+        <ul
+          style="
+            margin: 0;
+            padding: 10px;
+            padding-left: 20px;
+          "
+        >
           <li>Home</li>
           <li>Hours</li>
           <li>Direction</li>
         </ul>
       </div>
-      <div style="background-color: lightgray">
-        <p>
+      <div
+        class="text"
+        style="
+          background-color: lightgray;
+          margin-left: 3px;
+          margin-right: 3px;
+        "
+      >
+        <p style="margin-top: 0px">
           Lorem ipsum dolor sit amet, consectetur adipiscing
           elit. Suspendisse mollis libero lacinia, dictum
           nulla quis, lobortis turpis. Quisque auctor porta
