--- a/lab2/task2_9.html
+++ b/lab2/task2_9.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Task 2.3</title>
   </head>
   <body style="overflow: auto">
@@ -20,15 +23,29 @@
       "
     >
       <p>
-        <img src="image.jpg" alt="hamster" style="float: right" />
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mollis libero lacinia, dictum nulla quis,
-        lobortis turpis. Quisque auctor porta convallis. Proin vulputate placerat lectus et imperdiet. Donec pulvinar tempor
-        posuere. Fusce nibh dolor, ornare vel egestas in, condimentum vel mi. Cum sociis natoque penatibus et magnis dis
-        parturient montes, nascetur ridiculus mus. Etiam ac eleifend dui. Praesent malesuada sagittis odio vitae gravida.
-        Donec sodales diam turpis, sed blandit ante bibendum sed. Vestibulum feugiat lectus a felis porttitor, id cursus
-        purus ultricies. Nulla molestie pulvinar ipsum, eget fermentum urna ullamcorper non. In lacinia nisi at elit
-        efficitur, ut congue nulla tempus. Donec et urna varius, efficitur felis at, blandit elit. Pellentesque habitant
-        morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin quis convallis nibh, eget interdum
+        <img
+          src="image.jpg"
+          alt="hamster"
+          style="float: right"
+        />
+        Lorem ipsum dolor sit amet, consectetur adipiscing
+        elit. Suspendisse mollis libero lacinia, dictum
+        nulla quis, lobortis turpis. Quisque auctor porta
+        convallis. Proin vulputate placerat lectus et
+        imperdiet. Donec pulvinar tempor posuere. Fusce nibh
+        dolor, ornare vel egestas in, condimentum vel mi.
+        Cum sociis natoque penatibus et magnis dis
+        parturient montes, nascetur ridiculus mus. Etiam ac
+        eleifend dui. Praesent malesuada sagittis odio vitae
+        gravida. Donec sodales diam turpis, sed blandit ante
+        bibendum sed. Vestibulum feugiat lectus a felis
+        porttitor, id cursus purus ultricies. Nulla molestie
+        pulvinar ipsum, eget fermentum urna ullamcorper non.
+        In lacinia nisi at elit efficitur, ut congue nulla
+        tempus. Donec et urna varius, efficitur felis at,
+        blandit elit. Pellentesque habitant morbi tristique
+        senectus et netus et malesuada fames ac turpis
+        egestas. Proin quis convallis nibh, eget interdum
         turpis.
       </p>
     </div>
