--- a/lab5/index.html
+++ b/lab5/index.html
@@ -6,19 +6,93 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Document</title>
+    <title>Task №5</title>
     <link rel="stylesheet" href="main.css" />
   </head>
-  <style>
-    header {
-      position: fixed;
-      top: 0;
-      background-color: blue;
-      z-index: 1000;
-      width: 100%;
-    }
-  </style>
   <body>
-    <header>im header</header>
+    <div class="midblock">
+      <h1>Новость 1</h1>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+      asperiores aut nihil! Corporis debitis labore fugiat id,
+      eligendi ratione veritatis!
+      <div class="btnSpace">
+        <div class="btn" id="btn1">Открыть всплывающее окно</div>
+      </div>
+    </div>
+    <div class="midblock">
+      <h1>Новость 2</h1>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+      asperiores aut nihil! Corporis debitis labore fugiat id,
+      eligendi ratione veritatis!
+      <div class="btnSpace">
+        <div class="btn" id="btn2">Открыть всплывающее окно</div>
+      </div>
+    </div>
+    <div class="midblock">
+      <h1>Новость 3</h1>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+      asperiores aut nihil! Corporis debitis labore fugiat id,
+      eligendi ratione veritatis!
+      <div class="btnSpace">
+        <div class="btn" id="btn3">Открыть всплывающее окно</div>
+      </div>
+    </div>
+
+    <div class="modal" id="modal1">
+      <div class="modal-content">
+        <span class="close" id="closeModal1"></span>
+        <h2 class="modalHead">Новость 1</h2>
+        <p>
+          Новость 1:Lorem ipsum dolor sit amet consectetur adipisicing
+          elit. Amet asperiores aut nihil! Corporis debitis labore
+          fugiat id, eligendi ratione veritatis! Lorem ipsum dolor sit
+          amet consectetur adipisicing elit. Aperiam hic, ipsa, ullam,
+          cupiditate eveniet at voluptate corrupti commodi nobis
+          ratione voluptatem! Vel animi totam cupiditate doloribus ad
+          ab exercitationem officia eveniet impedit? Deleniti quasi
+          nisi consectetur perspiciatis quibusdam nostrum, enim
+          perferendis nam, magni molestias recusandae id libero vitae,
+          repudiandae praesentium.
+        </p>
+      </div>
+    </div>
+
+    <div class="modal" id="modal2">
+      <div class="modal-content">
+        <span class="close" id="closeModal2"></span>
+        <h2 class="modalHead">Новость 2</h2>
+        <p>
+          Новость 2:Lorem ipsum dolor sit amet consectetur adipisicing
+          elit. Amet asperiores aut nihil! Corporis debitis labore
+          fugiat id, eligendi ratione veritatis! Lorem ipsum dolor sit
+          amet consectetur adipisicing elit. Aperiam hic, ipsa, ullam,
+          cupiditate eveniet at voluptate corrupti commodi nobis
+          ratione voluptatem! Vel animi totam cupiditate doloribus ad
+          ab exercitationem officia eveniet impedit? Deleniti quasi
+          nisi consectetur perspiciatis quibusdam nostrum, enim
+          perferendis nam, magni molestias recusandae id libero vitae,
+          repudiandae praesentium.
+        </p>
+      </div>
+    </div>
+    <div class="modal" id="modal3">
+      <div class="modal-content">
+        <span class="close" id="closeModal3"></span>
+        <h2 class="modalHead">Новость 3</h2>
+        <p>
+          Новость 3:Lorem ipsum dolor sit amet consectetur adipisicing
+          elit. Amet asperiores aut nihil! Corporis debitis labore
+          fugiat id, eligendi ratione veritatis! Lorem ipsum dolor sit
+          amet consectetur adipisicing elit. Aperiam hic, ipsa, ullam,
+          cupiditate eveniet at voluptate corrupti commodi nobis
+          ratione voluptatem! Vel animi totam cupiditate doloribus ad
+          ab exercitationem officia eveniet impedit? Deleniti quasi
+          nisi consectetur perspiciatis quibusdam nostrum, enim
+          perferendis nam, magni molestias recusandae id libero vitae,
+          repudiandae praesentium.
+        </p>
+      </div>
+    </div>
   </body>
+  <script src="script.js"></script>
 </html>
